--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
                 close
             </button>
             <a href="#" class="modal-show">
-                본 페이지는 크롬에 최적화되어있습니다.</a>
+                <b>본 사이트는 스터디용으로 제작되었으며<br>
+                    리소스는 원저작자에게 있습니다.<br>
+                </b>
+
+                Chrome에 최적화되어 있는 사이트입니다.</a>
         </div>
     </div>
     <!-- 모바일메뉴 -->
